--- a/aula-03-04/AppPessoa/Components/Pages/Cadastro.razor
+++ b/aula-03-04/AppPessoa/Components/Pages/Cadastro.razor
@@ -1,8 +1,8 @@
 ﻿@page "/cadastro"
 @rendermode InteractiveServer
 @using AppPessoa.Models
-@using AppPessoa.Service
-@inject PessoaService pessoaService
+@using AppPessoa.Services
+@inject PessoaServices pessoaService
 @inject NavigationManager navegacao
 
 <div class="container">
