--- a/aula-03-04/AppPessoa/Components/Pages/Listar.razor
+++ b/aula-03-04/AppPessoa/Components/Pages/Listar.razor
@@ -1,8 +1,8 @@
 ﻿@page "/lista"
 @rendermode InteractiveServer
 @using AppPessoa.Models
-@using AppPessoa.Service
-@inject PessoaService pessoaService
+@using AppPessoa.Services
+@inject PessoaServices pessoaService
 
 <h3>Pessoas Cadastradas:</h3>
 
