--- a/aula-03-04/AppPessoa/Components/Pages/Consulta.razor
+++ b/aula-03-04/AppPessoa/Components/Pages/Consulta.razor
@@ -1,8 +1,8 @@
 ﻿@page "/consulta"
 @rendermode InteractiveServer
 @using AppPessoa.Models
-@using AppPessoa.Service
-@inject PessoaService pessoaService
+@using AppPessoa.Services
+@inject PessoaServices pessoaService
 @inject NavigationManager navegacao
 
 <h3>Consultas</h3>
