update inscrição e lançamento de notas

--- a/AppConcursos/Components/Pages/CadastroCandidato.razor
+++ b/AppConcursos/Components/Pages/CadastroCandidato.razor
@@ -1,4 +1,4 @@
-﻿@page "/cadastroCandidato"
+﻿@page "/cadastrarCandidato"
 @using AppConcursos.Models;
 @using AppConcursos.Controllers;
 @inject CandidatoController candidatoController;
