--- a/AppConcursos/Components/Layout/NavMenu.razor
+++ b/AppConcursos/Components/Layout/NavMenu.razor
@@ -15,7 +15,7 @@
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="cadastroCandidato">
+            <NavLink class="nav-link" href="cadastrarCandidato">
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Cadastrar Candidato
             </NavLink>
         </div>
@@ -29,6 +29,24 @@
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="inscricao">
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Inscrição de Candidato
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="lancarNotas">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Lançamento de Notas
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="resultadoPreliminar">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Resultado Preliminar
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="resultadoFinal">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Resultado Final
             </NavLink>
         </div>
     </nav>
